tests/samples/invalid/octal_zero.pn
fn main()
{
	var x = 00;
}
